// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a LoginScreen using Snapshots 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../app/images/login-bg-2.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "height": null,
          "resizeMode": "stretch",
          "width": null,
        },
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../app/images/insta-logo.png",
        }
      }
      style={
        Object {
          "height": 125,
          "width": 125,
        }
      }
    />
    <Image
      source={
        Object {
          "testUri": "../../../app/images/Instagram_logo.svg.png",
        }
      }
      style={
        Object {
          "height": 36,
          "marginTop": 20,
          "width": 120,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "height": 50,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        onChangeText={[Function]}
        style={
          Object {
            "borderColor": "#eee",
            "borderWidth": 0.5,
            "color": "#fff",
            "flex": 1,
            "height": 50,
            "marginLeft": 50,
            "marginRight": 50,
            "padding": 10,
          }
        }
        value={undefined}
      />
    </View>
    <View
      style={
        Object {
          "height": 50,
          "marginTop": 20,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        onChangeText={[Function]}
        secureTextEntry={true}
        style={
          Object {
            "borderColor": "#eee",
            "borderWidth": 0.5,
            "color": "#fff",
            "flex": 1,
            "height": 50,
            "marginLeft": 50,
            "marginRight": 50,
            "padding": 10,
          }
        }
        value={undefined}
      />
    </View>
    <View
      style={
        Object {
          "height": 50,
          "marginTop": 20,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "borderRadius": 5,
            "height": 50,
            "justifyContent": "center",
            "marginLeft": 50,
            "marginRight": 50,
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 17,
                "fontWeight": "500",
                "textAlign": "center",
              },
              null,
              Object {
                "color": "#444",
              },
              null,
            ]
          }
        >
          Login
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders a LoginScreen using Snapshots 2`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../app/images/login-bg-2.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Object {
          "height": null,
          "resizeMode": "stretch",
          "width": null,
        },
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../app/images/insta-logo.png",
        }
      }
      style={
        Object {
          "height": 125,
          "width": 125,
        }
      }
    />
    <Image
      source={
        Object {
          "testUri": "../../../app/images/Instagram_logo.svg.png",
        }
      }
      style={
        Object {
          "height": 36,
          "marginTop": 20,
          "width": 120,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "height": 50,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        onChangeText={[Function]}
        style={
          Object {
            "borderColor": "#eee",
            "borderWidth": 0.5,
            "color": "#fff",
            "flex": 1,
            "height": 50,
            "marginLeft": 50,
            "marginRight": 50,
            "padding": 10,
          }
        }
        value="user1@mol42.com"
      />
    </View>
    <View
      style={
        Object {
          "height": 50,
          "marginTop": 20,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        onChangeText={[Function]}
        secureTextEntry={true}
        style={
          Object {
            "borderColor": "#eee",
            "borderWidth": 0.5,
            "color": "#fff",
            "flex": 1,
            "height": 50,
            "marginLeft": 50,
            "marginRight": 50,
            "padding": 10,
          }
        }
        value="1234"
      />
    </View>
    <View
      style={
        Object {
          "height": 50,
          "marginTop": 20,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "borderRadius": 5,
            "height": 50,
            "justifyContent": "center",
            "marginLeft": 50,
            "marginRight": 50,
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 17,
                "fontWeight": "500",
                "textAlign": "center",
              },
              null,
              Object {
                "color": "#444",
              },
              null,
            ]
          }
        >
          Login
        </Text>
      </View>
    </View>
  </View>
</View>
`;
